--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <nav>
         <a href="#method">Method</a>
         <a href="#packages">Packages</a>
-        <a href="#clubs">Clubs</a>
+        <a href="private-club.html">Client Club</a>
         <a href="#partners">Partners</a>
         <a href="#contact">Start</a>
       </nav>
