--- a/private-club.html
+++ b/private-club.html
@@ -45,7 +45,7 @@
     ul{margin:12px 0 0 20px}
     li{margin:8px 0}
     footer{padding:24px;text-align:center;font-size:14px;color:var(--silver);opacity:.75;border-top:1px solid rgba(230,234,239,.12)}
-    .btn{display:inline-block;padding:12px 18px;margin-top:16px;border-radius:14px;background:linear-gradient(135deg,var(--gold),var(--goldBright));color:#181a1e;font-weight:600;transition:transform .15s ease}
+    .btn{display:inline-block;padding:12px 18px;margin-top:16px;border-radius:14px;background:linear-gradient(135deg,var(--gold),var(--goldBright));color:#181a1e;font-weight:600;transition:transform .15s ease, box-shadow .15s ease, background .15s ease}
     .btn:hover{transform:translateY(-1px)}
     .lock{font-size:14px;opacity:.75;margin-top:8px}
 
@@ -57,7 +57,7 @@
     .card--light .sub{color:#44505e}
     .card--light ul{margin-left:20px}
 
-    /* Emerald primary CTA */
+    /* Emerald primary CTA (kept for brand harmony; overridden by .sleek if present) */
     .btn.emerald{
       background:linear-gradient(135deg,#0e3f3f,#0b2e2e);color:#fff;border:1px solid rgba(255,255,255,.08)
     }
@@ -76,9 +76,50 @@
     .chat-input button{padding:12px 16px;border-radius:12px;background:var(--emerald);color:var(--white);border:none;font-weight:600;cursor:pointer}
     .chat-input button:hover{background:#0b2e2e}
 
+    /* --- Sleek AOL-silver corporate buttons (added) --- */
+    .btn.sleek{
+      background:linear-gradient(135deg,#dcdfe3,#f4f5f7);
+      color:#0a0d10;
+      border:1px solid rgba(10,13,16,.08);
+      border-radius:50px;
+      padding:0.9rem 1.8rem;
+      letter-spacing:.5px;
+      box-shadow:0 4px 12px rgba(0,0,0,.15);
+    }
+    .btn.sleek:hover{
+      background:linear-gradient(135deg,#c9ccd1,#e9ebef);
+      box-shadow:0 6px 14px rgba(0,0,0,.25);
+      transform:translateY(-2px);
+    }
+
+    .btn.sleek-outline{
+      background:transparent;
+      color:#0a0d10;
+      border:2px solid #cfd3d9;
+      border-radius:50px;
+      padding:0.9rem 1.8rem;
+      letter-spacing:.5px;
+      color:#0a0d10;
+    }
+    .btn.sleek-outline:hover{
+      background:#f4f5f7;
+      color:#0a0d10;
+      transform:translateY(-2px);
+      box-shadow:0 6px 14px rgba(0,0,0,.16);
+    }
+
+    /* Accessibility helper used below */
+    .visually-hidden{
+      position:absolute!important;
+      height:1px;width:1px;
+      overflow:hidden;clip:rect(1px,1px,1px,1px);
+      white-space:nowrap;border:0;padding:0;margin:-1px;
+    }
+
     /* Motion preference */
     @media (prefers-reduced-motion: reduce){
       .btn:hover{transform:none}
+      .btn.sleek:hover,.btn.sleek-outline:hover{transform:none}
     }
   </style>
 </head>
@@ -148,11 +189,11 @@
 
       <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:16px">
         <!-- Replace with your real form link -->
-        <a class="btn emerald" href="https://forms.gle/your-form-id" target="_blank" rel="noopener noreferrer"
+        <a class="btn sleek" href="https://forms.gle/your-form-id" target="_blank" rel="noopener noreferrer"
            aria-label="Start your application to the Private Client Club">
           Start Application
         </a>
-        <a class="btn" href="mailto:narinedevirn@gmail.com?subject=Private%20Client%20Club%20Application"
+        <a class="btn sleek-outline" href="mailto:narinedevirn@gmail.com?subject=Private%20Client%20Club%20Application"
            aria-label="Email Signature D to apply to the Private Client Club">
           Email Us Instead
         </a>
