--- a/index.html
+++ b/index.html
@@ -274,31 +274,18 @@
     </div>
   </section>
 
-<!-- SELECTED STYLE -->
-<section id="work" class="section" aria-labelledby="workTitle">
-  <div class="container">
-    <h3 id="workTitle">Selected Style</h3>
-    <p class="fine" style="max-width:720px">
-      A glimpse of our signature aesthetic — cinematic reels, luxury branding, and timeless design.
-    </p>
-
-    <div class="style-grid" style="display:grid;gap:16px;grid-template-columns:1fr; margin-top:14px">
-      <div class="package">
-        <h4>Cinematic Reel</h4>
-        <img src="images/reel-thumb.jpg" alt="Cinematic reel thumbnail" width="100%" style="border-radius:12px; margin-top:8px">
+  <!-- TESTIMONIALS / SHOWCASE -->
+  <section id="work" class="section">
+    <div class="container">
+      <h3>Selected Style</h3>
+      <div class="showcase" style="margin-top:12px">
+        <div class="shot">Emerald • Gold • Silver</div>
+        <div class="shot">Cinematic Confidence Card</div>
+        <div class="shot">Luxury Landing Page</div>
       </div>
-      <div class="package">
-        <h4>Luxury Landing Page</h4>
-        <img src="images/landing-thumb.jpg" alt="Luxury landing page preview" width="100%" style="border-radius:12px; margin-top:8px">
-      </div>
-      <div class="package">
-        <h4>Identity System</h4>
-        <img src="images/identity-thumb.jpg" alt="Brand identity system preview" width="100%" style="border-radius:12px; margin-top:8px">
-      </div>
+      <p class="fine">Replace with your visuals (confidence cards, reels, shots).</p>
     </div>
-  </div>
-</section>
-
+  </section>
 
   <!-- CONTACT / EMAIL LIST -->
   <section id="contact" class="section">
