--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
         <div class="start-ribbon" aria-label="Fast start banner">
           <span class="label">⚡ Start in 60 seconds</span>
           <span class="line">$1 audit today → 10-min plan tomorrow.</span>
-          <a class="btn gold" href="https://cash.app/$YOURCASH/1" target="_blank" rel="noopener">Start for $1</a>
+          <a class="btn gold" href="https://cash.app/93SignatureD/1" target="_blank" rel="noopener">Start for $1</a>
+
           <a class="btn silver" href="https://calendly.com/your-link/10min" target="_blank" rel="noopener">Quick Call</a>
         </div>
       </div>
@@ -295,7 +296,8 @@
         <div class="package">
           <h4>$1 Mini Audit</h4>
           <p class="fine">One page. Three fixes. Delivered in 24 hours.</p>
-          <a class="btn gold" href="https://cash.app/$YOURCASH/1" target="_blank" rel="noopener">Pay $1 via Cash App</a>
+          <a class="btn gold" href="https://cash.app/93SignatureD/1" target="_blank" rel="noopener">Pay $1 via Cash App</a>
+
           <p class="fine" style="margin-top:8px">After payment, email your brand + link to <a href="mailto:narinedevirn@gmail.com">narinedevirn@gmail.com</a>.</p>
         </div>
         <div class="package">
