--- a/index.html
+++ b/index.html
@@ -242,8 +242,12 @@
             <li>Ongoing spotlight in Signature D media</li>
           </ul>
           <div style="margin-top:12px;display:flex;gap:10px;flex-wrap:wrap">
-            <a class="btn" href="private-club.html">Request Invitation</a>
-          </div>
+  <a class="btn gold" href="https://cash.app/93SignatureD/240" target="_blank" rel="noopener">
+    Join for $240
+  </a>
+  <a class="btn" href="private-club.html">Details</a>
+</div>
+
         </div>
         <div class="package">
           <h4>Influencer Access Club</h4>
